set the min height instead of having a fixed height to allow word wraps

--- a/app/assets/stylesheets/application/_basic.css.scss
+++ b/app/assets/stylesheets/application/_basic.css.scss
@@ -77,7 +77,7 @@ textarea {
       border: none;
       border: 1px solid $gray-light;
       box-shadow: none;
-      height: 46px;
+      min-height: 46px; /* Our inputs have a minimum size of 46px */
 
       &.focus {
         background: $white!important;
